@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Mon Aug 25 16:05:54 2008
+# Wed Aug 27 18:51:58 2008
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV6=y
@@ -30,11 +30,12 @@ CONFIG_SPINNER=y
 CONFIG_ATAG=y
 CONFIG_MMU=y
 # CONFIG_FORCE_WRITETHROUGH_DCACHE is not set
-# CONFIG_DISABLE_MMU_AT_BOOT is not set
+CONFIG_DISABLE_MMU_AT_BOOT=y
 CONFIG_SDRAMBOOT_REPORT=y
 CONFIG_STACK_SIZE=0x1000
 # CONFIG_BOOTSTRAP_MEMTEST is not set
 CONFIG_ATAG_PHYS=0x80000100
+CONFIG_ARCH_NUMBER=1348
 CONFIG_APEX_VMA=0x80200000
 CONFIG_KERNEL_LMA=0x80008000
 # CONFIG_USE_RAMDISK is not set
@@ -54,11 +55,13 @@ CONFIG_FREQ_533_133_66=y
 # CONFIG_FREQ_208_104_52 is not set
 CONFIG_MX31_UART1=y
 # CONFIG_MX31ADS_UARTA is not set
+CONFIG_IPU_TEST=y
 
 #
 # Platform Drivers
 #
 CONFIG_ARCH_MX31=y
+CONFIG_USES_IPU_TEST=y
 
 #
 # Commands
@@ -98,7 +101,7 @@ CONFIG_CMD_MEMLIMIT=y
 # CONFIG_DRIVER_JFFS2 is not set
 # CONFIG_DRIVER_FIS is not set
 CONFIG_DRIVER_NOR_CFI=y
-# CONFIG_DRIVER_NOR_CFI_NO_BUFFERED is not set
+CONFIG_DRIVER_NOR_CFI_NO_BUFFERED=y
 # CONFIG_DRIVER_NOR_CFI_USE_CACHE is not set
 CONFIG_DRIVER_NOR_CFI_TYPE_INTEL=y
 # CONFIG_DRIVER_NOR_CFI_TYPE_SPANSION is not set
@@ -113,8 +116,7 @@ CONFIG_ENV=y
 CONFIG_ENV_LINK=y
 CONFIG_ENV_MUTABLE=y
 CONFIG_ENV_REGION="nor:128k+16k"
-CONFIG_ENV_SAVEATONCE=y
-CONFIG_ENV_SIZE=16384
+# CONFIG_ENV_SAVEATONCE is not set
 CONFIG_ENV_CHECK_LEN=1024
 CONFIG_VARIATIONS=y
 CONFIG_VARIATION_SUFFIX="-alt"
@@ -124,13 +126,6 @@ CONFIG_NOR_BOOT=y
 # CONFIG_ONENAND_BOOT is not set
 # CONFIG_COMPANION_EVT1_BOOT is not set
 # CONFIG_COMPANION_EVT2_BOOT is not set
-
-#
-#    Default Startup
-#
-# CONFIG_AUTOBOOT is not set
-CONFIG_ENV_STARTUP_KERNEL_COPY=y
-# CONFIG_ENV_REGION_KERNEL_SWAP is not set
 # CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
@@ -145,7 +140,8 @@ CONFIG_ENV_REGION_KERNEL="nor:256k+1600k"
 CONFIG_ENV_DEFAULT_CMDLINE_OVERRIDE=y
 CONFIG_ENV_DEFAULT_CMDLINE="console=ttymxc0,115200 root=/dev/nfs ip=rarp jtag=on"
 # CONFIG_ENV_DEFAULT_CMDLINE_ALT_P is not set
-# CONFIG_ENV_DEFAULT_STARTUP_OVERRIDE is not set
+CONFIG_ENV_DEFAULT_STARTUP_OVERRIDE=y
+CONFIG_ENV_DEFAULT_STARTUP="copy $kernelsrc $bootaddr ; clc ; wait 20 Booting... ; boot"
 # CONFIG_ENV_DEFAULT_STARTUP_ALT_P is not set
 CONFIG_USES_NOR_BOOTFLASH=y
 CONFIG_RELOCATE_SIMPLE=y
